First rough implementation.
