# iscc_did_driver/openapi.yaml
@@ -104,3 +104,29 @@ components:
           type: object
         didDocumentMetadata:
           type: object
+    DidDocument:
+      description: A DID document
+      type: object
+      properties:
+        '@context':
+          type: string
+          default: https://www.w3.org/ns/did/v1
+          description: The [JSON-LD](https://json-ld.org/) Context URI.
+          readOnly: true
+        id:
+          type: string
+          example: did:iscc:miagwptv4j2z57ci
+        alsoKnownAs:
+          type: string
+          example: iscc:kecycpu3okiudz7tybrk5hz4jgptillat2iw7ty7eyiji4qsk5i353i
+        controller:
+          type: string
+          example: did:pkh:eip155:1:0x901ee44e3bddf4bc1c08a2ed229498512f8bcfdc
+    DidDocumentMetadata:
+      description: DID Document Metadata
+      type: object
+      properties:
+        created:
+          type: string
+          format: date-time
+          example: 2022-08-31 19:08:01+00:00
